# fixed_format_buffer

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  BUILD+TEST.MD  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  conanfile.py
.github/workflows/: ci.yml
include/ffb/: buffer_policy.h  fixed_format_buffer.h
src/ffb/: fixed_format_buffer.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: test.cpp
tests/: CMakeLists.txt  buffer_policy_test.cpp  buffer_safety_test.cpp  fixed_format_buffer_test.cpp  sprintf_comparison_test.cpp
